Fix dropzone height for most common mobile

--- a/JavaScript/colorization-demo/public/css/custom.css
+++ b/JavaScript/colorization-demo/public/css/custom.css
@@ -49,7 +49,10 @@ pre {
 
 /* Custom, iPhone Retina */
 @media only screen and (min-width : 320px) {
-	.dz-message { height: 60px; line-height: normal; padding-top: 8px }
+	.dz-message { height: 109px; line-height: 109px; padding-top: 0px }
+}
+@media only screen and (min-width : 360px) {
+	.dz-message { height: 129px; line-height: 129px; padding-top: 0px }
 }
 @media only screen and (min-width : 768px) {
 	.dz-message { height: 300px; line-height: 300px; padding-top: 0px;}
